<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:id = "@+id/home_fragment_container"
        android:background = "@drawable/curved_gradient_black">

    <com.google.android.material.appbar.AppBarLayout
            android:paddingTop = "@dimen/appbar_padding_top"
            android:padding = "15dp"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:theme = "@style/AppTheme.AppBarOverlay"
            android:background = "@android:color/transparent">
        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                app:layout_scrollFlags = "scroll|exitUntilCollapsed">
            <RelativeLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "45dp">
                <ImageView
                        android:id = "@+id/settings_image_view"
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:src = "@drawable/ic_settings"
                        android:layout_alignParentEnd = "true"
                        android:layout_alignParentBottom = "true"
                        android:contentDescription = "@string/settings_icon" />
                <ImageView
                        android:id = "@+id/spotify_artist_image_view"
                        android:layout_width = "40dp"
                        android:layout_height = "30dp"
                        android:src = "@drawable/spotify_blue"
                        android:layout_alignParentStart = "true"
                        android:layout_alignParentBottom = "true"
                        android:visibility = "gone"
                        android:contentDescription = "@string/spotify_artist_icon" />
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id = "@+id/home_scroll_view"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:padding = "10dp"
            android:overScrollMode = "never"
            app:layout_behavior = "@string/appbar_scrolling_view_behavior">
        <LinearLayout
                android:orientation = "vertical"
                android:background = "@android:color/transparent"
                android:layout_marginVertical = "10dp"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content">

            <TextView
                    android:id = "@+id/home_recently_played_title"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/recently_played"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:layout_marginVertical = "5dp"
                    android:textSize = "@dimen/home_list_title_size" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id = "@+id/home_recently_played_recycler_view"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:orientation = "horizontal"
                    android:overScrollMode = "never"
                    android:layout_marginVertical = "10dp"
                    android:nestedScrollingEnabled = "false" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id = "@+id/home_main_list_recycler_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_marginVertical = "10dp"
                    android:overScrollMode = "never" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
            android:id = "@+id/loading_view"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:background = "@color/darkGray">
        <ProgressBar
                android:id = "@+id/loading_home_progress"
                android:layout_width = "80dp"
                android:layout_height = "80dp"
                android:layout_centerInParent = "true" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


