<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:tools = "http://schemas.android.com/tools"
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        android:id = "@+id/current_user_profile_fragment"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:background="@color/black"
        tools:context = ".ui.currentUserProfile.CurrentUserProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
...
                            android:id="@+id/user_image"
                            android:layout_width = "130dp"
                            android:layout_height = "130dp"
                            android:src = "@drawable/unnamed"
                            android:layout_gravity = "center" />
                    <TextView
                            android:id = "@+id/user_name"
                            android:layout_marginTop = "20dp"
                            android:textColor = "@color/white"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:text = "@string/user_name"
                            android:textSize = "18sp"
...
