<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        android:orientation = "vertical"
        android:background = "@android:color/transparent"
        android:layout_marginBottom = "20dp"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content">

    <TextView
            android:id = "@+id/home_main_list_item_title"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:text = "Title"
            android:textStyle = "bold"
            android:textColor = "@color/white"
            android:textSize = "@dimen/home_list_title_size"
            android:layout_marginVertical = "15dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id = "@+id/home_inner_list_recycler_view"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:orientation = "horizontal"
            android:overScrollMode = "never"
            android:nestedScrollingEnabled = "false" />

</LinearLayout>