<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        android:id = "@+id/search_main_background_layout"
        android:background = "@color/midGray"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:paddingTop = "25dp">

    <FrameLayout
            android:id = "@+id/search_bar_frame_layout"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content">

        <LinearLayout
                android:id = "@+id/search_edit_text_layout"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:orientation = "horizontal"
                android:weightSum = "100"
                android:padding = "7dp"
                android:background = "@color/lightGray"
                android:visibility = "visible">

            <ImageView
                    android:id = "@+id/search_bar_back_arrow"
                    android:contentDescription = "@string/back_arrow_in_search_bar"
                    android:layout_width = "0dp"
                    android:layout_weight = "10"
                    android:layout_height = "match_parent"
                    android:padding = "7dp"
                    android:src = "@drawable/ic_left_arrow" />

            <EditText
                    android:id = "@+id/search_bar_edit_text"
                    android:layout_width = "0dp"
                    android:layout_weight = "77"
                    android:layout_height = "wrap_content"
                    android:textSize = "18sp"
                    android:textColor = "@color/white"
                    android:padding = "7dp"
                    android:background = "@android:color/transparent"
                    android:textCursorDrawable = "@drawable/green_cursor"
                    android:cursorVisible = "true"
                    android:inputType = "text" />
            <FrameLayout
                    android:layout_width = "0dp"
                    android:layout_weight = "13"
                    android:layout_height = "match_parent">
                <ImageView
                        android:id = "@+id/search_camera_image_in_edit_text"
                        android:contentDescription = "@string/camera_icon_in_search_bar"
                        android:layout_width = "match_parent"
                        android:layout_height = "match_parent"
                        android:padding = "6dp"
                        android:src = "@drawable/ic_photo_camera" />
                <ImageView
                        android:id = "@+id/reset_search_image"
                        android:contentDescription = "@string/reset_icon_in_search_bar"
                        android:layout_width = "match_parent"
                        android:layout_height = "match_parent"
                        android:padding = "7dp"
                        android:src = "@drawable/ic_close_white_24dp"
                        android:visibility = "gone" />
            </FrameLayout>

        </LinearLayout>

        <RelativeLayout
                android:id = "@+id/search_text_layout"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:orientation = "horizontal"
                android:padding = "5dp"
                android:layout_marginHorizontal = "10dp"
                android:layout_marginTop = "8dp"
                android:visibility = "gone"
                android:background = "@color/lightGray">

            <TextView
                    android:id = "@+id/search_bar_text_view"
                    android:layout_width = "300dp"
                    android:layout_height = "wrap_content"
                    android:textSize = "14sp"
                    android:textStyle = "bold"
                    android:text = "@string/search"
                    android:layout_centerHorizontal = "true"
                    android:gravity = "center"
                    android:textColor = "@color/white"
                    android:padding = "4dp" />

            <ImageView
                    android:id = "@+id/search_camera_image_in_text_view"
                    android:contentDescription = "@string/camera_icon_in_search_bar"
                    android:layout_alignParentEnd = "true"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:src = "@drawable/ic_photo_camera"
                    android:layout_marginEnd = "10dp" />
        </RelativeLayout>


    </FrameLayout>

    <androidx.core.widget.NestedScrollView
            android:id = "@+id/search_history_list_container"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:layout_below = "@id/search_bar_frame_layout"
            android:layout_marginTop = "10dp"
            android:visibility = "gone"
            android:overScrollMode = "never">
        <LinearLayout
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:orientation = "vertical">
            <TextView
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/recent_searches"
                    android:textStyle = "bold"
                    android:textSize = "20sp"
                    android:paddingHorizontal = "10dp"
                    android:paddingVertical = "20dp"
                    android:textColor = "@color/white" />
            <androidx.recyclerview.widget.RecyclerView
                    android:id = "@+id/search_history_list_recycler_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:nestedScrollingEnabled = "false"
                    android:overScrollMode = "never" />

            <TextView
                    android:id = "@+id/clear_recent_searches_text_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/clear_recent_searches"
                    android:textStyle = "bold"
                    android:textSize = "17sp"
                    android:paddingHorizontal = "10dp"
                    android:paddingVertical = "20dp"
                    android:textColor = "@color/whitish_gray" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ScrollView
            android:id = "@+id/search_result_list_layout"
            android:visibility = "gone"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:layout_below = "@id/search_bar_frame_layout"
            android:overScrollMode = "never"
            android:fillViewport = "true">

        <LinearLayout
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:layout_margin = "10dp"
                android:paddingBottom = "10dp"
                android:orientation = "vertical">

            <androidx.recyclerview.widget.RecyclerView
                    android:id = "@+id/search_list_recycler_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:nestedScrollingEnabled = "false" />

            <TextView
                    android:id = "@+id/see_all_artists_text_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/see_all_artists"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:layout_marginVertical = "10dp"
                    android:textSize = "@dimen/search_list_item_title" />

            <TextView
                    android:id = "@+id/see_all_songs_text_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/see_all_songs"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:layout_marginVertical = "10dp"
                    android:textSize = "@dimen/search_list_item_title" />
            <TextView
                    android:id = "@+id/see_all_playlists_text_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/see_all_playlists"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:layout_marginVertical = "10dp"
                    android:textSize = "@dimen/search_list_item_title" />
            <TextView
                    android:id = "@+id/see_all_albums_text_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/see_all_albums"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:layout_marginVertical = "10dp"
                    android:textSize = "@dimen/search_list_item_title" />
            <TextView
                    android:id = "@+id/see_all_profiles_text_view"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:text = "@string/see_all_profiles"
                    android:textStyle = "bold"
                    android:textColor = "@color/white"
                    android:layout_marginVertical = "10dp"
                    android:textSize = "@dimen/search_list_item_title" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
            android:id = "@+id/search_empty_background_layout"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:paddingBottom = "56dp"
            android:gravity = "center">

        <ImageView
                android:id = "@+id/search_image_view"
                android:layout_width = "90dp"
                android:layout_height = "110dp"
                android:layout_marginBottom = "20dp"
                android:src = "@drawable/ic_search_unselected"
                android:layout_centerVertical = "true"
                android:layout_centerHorizontal = "true" />

        <TextView
                android:id = "@+id/search_frag_text_view"
                android:layout_below = "@id/search_image_view"
                android:text = "@string/find_the_music_you_love"
                android:textColor = "@color/white"
                android:textSize = "17sp"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_centerHorizontal = "true" />

        <TextView
                android:layout_below = "@id/search_frag_text_view"
                android:text = "@string/search_for_artists_songs"
                android:textColor = "@color/white"
                android:textSize = "14sp"
                android:layout_marginTop = "10dp"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_centerHorizontal = "true" />

    </RelativeLayout>


</RelativeLayout>